@@ -1,7 +1,7 @@
 package com.training.use_management.service;
 
 import com.training.use_management.dto.requestDTO.LoginRequest;
-import com.training.use_management.dto.requestDTO.RegisterRequest;
+import com.training.use_management.dto.requestDTO.UserRequest;
 import com.training.use_management.dto.responseDTO.UserProfileDTO;
 import com.training.use_management.entity.Role;
 import com.training.use_management.entity.User;
@@ -9,6 +9,8 @@ import com.training.use_management.repository.RoleRepository;
 import com.training.use_management.repository.UserRepository;
 import com.training.use_management.security.JwtUtil;
 import com.training.use_management.utils.PasswordUtil;
+import com.training.use_management.utils.UserUtil;
+import org.springframework.beans.factory.annotation.Autowired;
 import org.springframework.http.HttpStatus;
 import org.springframework.http.ResponseEntity;
 import org.springframework.stereotype.Service;
@@ -17,6 +19,9 @@ import java.util.*;
 
 @Service
 public class AuthService {
+
+    @Autowired
+    private UserUtil userUtil;
 
     private final RoleRepository roleRepository;
     private final UserRepository userRepository;
@@ -28,41 +33,31 @@ public class AuthService {
         this.jwtUtil = jwtUtil;
     }
 
-    public ResponseEntity<?> register(RegisterRequest request) {
+    public ResponseEntity<?> register(UserRequest request) {
         if (userRepository.findByUsername(request.getUsername()).isPresent()) {
             return ResponseEntity.badRequest().body("Username already exists");
         }
 
-        User user = new User();
-        user.setUsername(request.getUsername());
-        user.setEmail(request.getEmail());
-        user.setPassword(PasswordUtil.encodePassword(request.getPassword()));
-
         Role userRole = roleRepository.findByName("USER")
                 .orElseThrow(() -> new RuntimeException("Role not found: USER"));
 
-        user.setRoles(Collections.singleton(userRole));
-
+        User user = UserUtil.createUser(request, Set.of(userRole));
 
         userRepository.save(user);
-
         return ResponseEntity.ok("User registered successfully with username: " + user.getUsername());
     }
 
     // ✅  đăng nhập
     public ResponseEntity<?> login(LoginRequest request) {
-        Optional<User> userOpt = userRepository.findByUsername(request.getUsername());
+        Optional<User> loginUsername = userRepository.findByUsername(request.getUsername());
 
-//            BCryptPasswordEncoder passwordEncoder = new BCryptPasswordEncoder();
-//            String encodedPassword = passwordEncoder.encode(userOpt.get().getPassword()); // Sử dụng tham số password thay vì hardcod
-
-        if (userOpt.isPresent() && PasswordUtil.matches(request.getPassword(), userOpt.get().getPassword())) {
-            String token = jwtUtil.generateToken(userOpt.get().getUsername());
+        if (loginUsername.isPresent() && PasswordUtil.matches(request.getPassword(), loginUsername.get().getPassword())) {
+            String token = jwtUtil.generateToken(loginUsername.get().getUsername());
 
             Map<String, Object> response = new HashMap<>();
             response.put("token", token);
-            response.put("username", userOpt.get().getUsername());
-            response.put("roles", userOpt.get().getRoles());
+            response.put("username", loginUsername.get().getUsername());
+            response.put("roles", loginUsername.get().getRoles());
 
             return ResponseEntity.ok(response);
         }
@@ -71,10 +66,10 @@ public class AuthService {
 
     // ✅ Lấy thông tin user từ JWT
     public ResponseEntity<?> getUserProfile(String username) {
-        Optional<User> userOpt = userRepository.findByUsername(username);
+        Optional<User> loginUsername = userRepository.findByUsername(username);
 
         // Nếu tìm thấy người dùng, trả về thông tin người dùng
-        return userOpt.map(user -> ResponseEntity.ok(new UserProfileDTO(
+        return loginUsername.map(user -> ResponseEntity.ok(new UserProfileDTO(
                         user.getId(),
                         user.getUsername(),
                         user.getEmail(),
